messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app-blue
  labels:
    app: django-messaging-app
    version: blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-messaging-app
      version: blue
  template:
    metadata:
      labels:
        app: django-messaging-app
        version: blue
    spec:
      containers:
      - name: django-messaging-app
        image: your-dockerhub-username/django-messaging-app:2.0 # Updated to version 2.0
        ports:
        - containerPort: 8000
